Add SEO meta tags, Open Graph, Twitter cards, and favicon updates

--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>StatusForge – Authority, Engineered</title>
+    <meta name="title" content="StatusForge – Authority, Engineered">
+    <meta name="description" content="We engineer credibility, visibility, and prestige for realtors and SA professionals. Look like the market leader — before you are one.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://statusforge.co.za/">
+    <meta property="og:title" content="StatusForge – Authority, Engineered">
+    <meta property="og:description" content="Credibility, visibility, and prestige for SA professionals in 14 days.">
+    <meta property="og:image" content="https://statusforge.co.za/og-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://statusforge.co.za/">
+    <meta property="twitter:title" content="StatusForge – Authority, Engineered">
+    <meta property="twitter:description" content="Credibility, visibility, and prestige for SA professionals in 14 days.">
+    <meta property="twitter:image" content="https://statusforge.co.za/og-image.png">
+    
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StatusForge</title>
   </head>
 
   <!-- Google tag (gtag.js) -->
